@@ -94,6 +94,7 @@ peak.running.cluster.* =
 
 web_templates = "peak.web.templates"
 os = "os"
+sys = "sys"
 cursfmts = "peak.storage.cursor_formatters"
 run_sched = "peak.running.scheduler"
 twisted_support = "peak.events.twisted_support"
@@ -105,7 +106,6 @@ ddt_demos = "peak.ddt.demos"
 # within the file.  But the reverse is not true: included files cannot define
 # shortcuts that affect the including file.  This keeps you from having to
 # trace every included file to find out where a definition is coming from.
-
 
 
 
@@ -348,22 +348,63 @@ org.omg.mof.Model.1.3 = importString('peak.metamodels:MOF131')
 peak.tests.MailModel  = importString('peak.storage.tests:xmi')
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 [peak.running]
+
+# Defaults for command-line apps
+argv    = sys.argv
+stdin   = sys.stdin
+stdout  = sys.stdout
+stderr  = sys.stderr
+environ = os.environ
 
 # Stop the main loop when any of these signals occur
 mainLoop.stopOnSignals = 'SIGINT', 'SIGTERM', 'SIGBREAK'
 
 # This setting only affects the 'UntwistedReactor'
 reactor.checkInterval =
-    importString('sys.platform')=='win32' and 0.125 or 3600
+    sys.platform=='win32' and 0.125 or 3600
     # if no scheduled tasks, do 1 select/hour (or 1/8 second on Windows)
 
 timers.cpu     = importString('time.clock')
 timers.elapsed =
     importString(
         # On Windows, 'clock' measures elapsed time w/more precision
-        importString('sys.platform')=='win32' and 'time.clock' or 'time.time'
+        sys.platform=='win32' and 'time.clock' or 'time.time'
     )
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -577,7 +618,7 @@ peak.ddt.interfaces.IDocumentProcessor =
 # Routing for peak-supplied log messages - default is to log WARNING or
 # higher to 'sys.stderr'
 
-* = logs.LogStream(stream=importString('sys.stderr'), levelName='WARNING')
+* = logs.LogStream(stream=sys.stderr, levelName='WARNING')
 
 
 [peak.logging.levels]
